manifest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livematches
  namespace: default
spec:
  selector:
    app: livematches
  ports:
    - name: web
      port: 8013
      targetPort: 8013
    - name: secure
      port: 8003
      targetPort: 8003
